# hackathon_mcp_client

./: .env.template  .gitignore  Dockerfile  Makefile  README.md  agent.py  app.py  cert_fix.sh  client.py  config.py  kitt.yml  pyproject.toml  schema.py  security_manager.py  state.py  utils.py
archived/: cache.py  client.py  state.py
