[project]
name = "mcp-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.50.0",
    "cachetools>=5.5.2",
    "fastapi>=0.115.12",
    "mcp>=1.7.1",
    "openai>=1.77.0",
    "pycryptodome>=3.22.0",
    "python-dotenv>=1.1.0",
]
