[project]
name = "mcp-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.50.0",
    "cachetools>=5.5.2",
    "fastapi>=0.115.12",
    "mcp>=1.7.1",
    "openai>=1.77.0",
    "openai-agents>=0.0.14",
    "orjson>=3.10.18",
    "pycryptodome>=3.22.0",
    "python-dotenv>=1.1.0",
    "regex>=2024.11.6",
    "tiktoken>=0.9.0",
]

[[tool.uv.index]]
url = "https://pypi.ci.artifacts.walmart.com/artifactory/api/pypi/gpa-pypi/simple"
default = true
